--- a/css/main.css
+++ b/css/main.css
@@ -16,19 +16,22 @@
 
 @font-face {
   font-family: 'fontello';
-  src: url("font/fontello.eot");
-  src: url("font/fontello.eot") format("embedded-opentype"), url("font/fontello.woff2") format("woff2"), url("font/fontello.woff") format("woff"), url("font/fontello.ttf") format("truetype"), url("font/fontello.svg") format("svg");
+  src: url('font/fontello.eot?79226464');
+  src: url('font/fontello.eot?79226464#iefix') format('embedded-opentype'),
+       url('font/fontello.woff2?79226464') format('woff2'),
+       url('font/fontello.woff?79226464') format('woff'),
+       url('font/fontello.ttf?79226464') format('truetype'),
+       url('font/fontello.svg?79226464#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('font/fontello.svg?67189028#fontello') format('svg');
+    src: url('../font/fontello.svg?79226464#fontello') format('svg');
   }
 }
 */
@@ -36,50 +39,42 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  speak: never;
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-instagram:before {
-  content: '\f16d';
-}
-
-/* '' */
-.icon-vk:before {
-  content: '\f189';
-}
-
-/* '' */
-.icon-steam:before {
-  content: '\f1b6';
-}
-
-/* '' */
-.icon-telegram:before {
-  content: '\f2c6';
-}
-
-/* '' */
+.icon-github:before { content: '\f09b'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-vk:before { content: '\f189'; } /* '' */
+.icon-steam:before { content: '\f1b6'; } /* '' */
+.icon-telegram:before { content: '\f2c6'; } /* '' */
 html {
   line-height: 1.4;
   font-size: 18px;
