--- a/css/main.css
+++ b/css/main.css
@@ -82,30 +82,30 @@ html {
   height: 100%;
 }
 
-@media screen and (max-width: 1280px) {
-  html {
-    font-size: 16px;
-  }
-}
+/* @media screen and (max-width: 1280px) { */
+  /* html { */
+    /* font-size: 16px; */
+  /* } */
+/* } */
 
-@media screen and (max-width: 768px) {
-  html {
-    font-size: 15px;
-  }
-}
+/* @media screen and (max-width: 768px) { */
+  /* html { */
+    /* font-size: 15px; */
+  /* } */
+/* } */
 
-@media screen and (max-width: 360px) {
-  html {
-    font-size: 17px;
-  }
-}
+/* @media screen and (max-width: 360px) { */
+  /* html { */
+    /* font-size: 17px; */
+  /* } */
+/* } */
 
-@media screen and (max-width: 480px) {
-  html {
-    font-size: 25px;
-  }
+/* @media screen and (max-width: 480px) { */
+  /* html { */
+    /* font-size: 25px; */
+  /* } */
 
-}
+/* } */
 
 body {
   margin: 0;
