--- a/stepik/main.css
+++ b/stepik/main.css
@@ -2,7 +2,7 @@ body{background: #edf2f7;}
 details{
   display:block;
   background: #fff;
-  width:800px;
+  width:600px;
   box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   border-radius: 8px;
   overflow:hidden;
@@ -46,4 +46,8 @@ details[open] summary ~ *{
 summary:focus {
   outline:0;
   box-shadow: inset 0 0 1px rgba(0,0,0,0.3), inset 0 0 2px rgba(0,0,0,0.3);
+}
+pre {
+  word-wrap: break-word;      /* IE 5.5-7 */
+  white-space: pre-wrap;      /* текущие браузеры */
 }
